# paniolo

./: .gitignore  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/skills/paniolo-reference/: SKILL.md
.claude/skills/paniolo-reference/references/: files.md  project-structure.md  summary.md  tech-stacks.md
.github/workflows/: ci.yml  docs.yml  release.yml
cambrionix/: Cargo.toml
cambrionix/src/: main.rs  proto.rs
ch9329/: Cargo.toml  README.md
ch9329/src/: daemon.rs  keys.rs  main.rs  proto.rs  server.rs  session.rs  uart.rs
cli/: Cargo.toml
cli/src/: adb.rs  ch9329.rs  daemons.rs  discover.rs  dispatch.rs  doctor.rs  labfile.rs  main.rs  model.rs  netboot.rs  netif.rs  power.rs  serial.rs  setup.rs  skills.rs  ssh.rs  state.rs  usbhub_profiles.rs  video.rs
docs/: README.md  adb.md  adding-power-helpers.md  agent-evals.md  architecture.md  ch9329-spec.md  config-redesign.md  console-front-door.md  dashboard.md  distributed-control-plan.md  distributed-control.md  hardware.md  hid-dual-board-design.md  hid-serial-protocol.md  hid.md  netboot.md  netif.md  pi4-control-host.md  power.md  requirements.md  serial.md  uefi-http-boot-design.md  video.md
docs/ci-integration/: design.md  gap-analysis.md  redfish-provider.md  related-work.md  requirements.md
evals/: .gitignore  README.md  run.py  serial_loopback.py
evals/fixtures/: bench.toml  dut_console.toml  dut_dual_console.toml  pico_absent_devices.toml  pico_console.toml  pico_console_bmc.toml  two_targets.toml
evals/graders/: __init__.py  drift.py  judge.py  t1_config.py
evals/scenarios/: c1_provision_target.toml  c2_add_serial.toml  c3_shelly_power.toml  c4_inspect.toml  c5_drop_channel.toml  c6_remote_host.toml  c7_adb_reboot.toml  c8_doctor.toml  m1_capability_map.toml  m2_out_of_scope.toml  m3_discover_hardware.toml  m4_helper_binaries.toml  m5_setup_host.toml  r1_netboot_console.toml  r2_ffx_handoff.toml  r3_powercycle_ocr.toml  r4_serial_type.toml  r5_wait_screen.toml  r6_bios_click.toml  r7_wedged_daemon.toml  r8_power_state.toml  r9_link_toggle.toml  s10_persist_after_stop.toml  s11_console_reboot.toml  s1_dual_console_config.toml  s2_capture_and_tail.toml  s3_since_poll.toml  s4_send_and_capture.toml  s5_slow_console_interrupt.toml  s6_multi_interface_select.toml  s7_range_json.toml  s8_port_exclusivity.toml  s9_dtr_reset.toml
hdmicap/: Cargo.toml  build.rs
hdmicap/assets/: index.html
hdmicap/src/: capture.rs  capture_avf.m  capture_thread.rs  daemon.rs  frame.rs  main.rs  pixel.rs  server.rs
hidrig/: Cargo.toml  HANDOFF.md  README.md  SETUP.md
hidrig/control/: boot.py  code.py
hidrig/firmware/: boot.py  code.py  config.py
hidrig/firmware/dual/: README.md  host_send.py
hidrig/firmware/dual/control/: boot.py  code.py
hidrig/host/: Makefile  README.md  hid_bench.py  hid_capture_usb.m  hid_seize_reports.c  leak_check.py
hidrig/src/: compose.rs  daemon.rs  main.rs  proto.rs  pty.rs  server.rs  uart.rs
netbootd/: Cargo.toml
netbootd/src/: bpf.rs  dhcp.rs  frame.rs  handoff.rs  http.rs  lib.rs  main.rs  netcfg.rs  served.rs  tftp.rs
ocr/: .gitignore  linuxocr  visionocr.swift
packaging/: nfpm.yaml
packaging/scripts/: postinstall.sh
scripts/: ci-local.sh
serialcap/: Cargo.toml
serialcap/src/: capture.rs  daemon.rs  main.rs  serial_io.rs  server.rs
shellyplug/: Cargo.toml  README.md
shellyplug/src/: main.rs  rpc.rs
skills/kvm-puppeting/: SKILL.md
skills/paniolo/: SKILL.md
skills/usbhub/: SKILL.md
src/paniolo/: __init__.py  _cli.py  _config.py  _dhcp.py  _hid.py  _lab.py  _labfile.py  _netboot.py  _netif.py  _ocr.py  _paths.py  _power.py  _remote.py  _serial.py  _ssh.py  _state.py  _tftp.py  _video.py
tests/: test_cli.py  test_config.py  test_config_cli.py  test_hid.py  test_lab.py  test_labfile.py  test_netboot.py  test_netif.py  test_paths.py  test_remote.py  test_serial.py  test_ssh.py  test_state.py  test_video.py
usbhub/: Cargo.toml  README.md
usbhub/profiles/: README.md  rosonway-rsh-a37s.toml
usbhub/src/: act.rs  hub.rs  learn.rs  main.rs  profile.rs  topo.rs  tty.rs
zigplug/: pyproject.toml
zigplug/src/zigplug/: __init__.py  __main__.py  _app.py  _cli.py  _daemon.py
