[project]
name = "paniolo"
version = "0.1.0"
description = "Agent-controlled target machine wrangler for low-level software development"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12",
    "tomlkit>=0.13",
]

[project.scripts]
paniolo = "paniolo._cli:app"

[project.optional-dependencies]
hid = [
    "pyserial>=3.5",
]

[tool.uv]
package = true

[tool.pyink]
line-length = 88

[tool.pytest.ini_options]
# All host tests live in tests/. Scope collection there so pytest does not sweep
# up CircuitPython firmware (e.g. hidrig/firmware/**/*_test.py, which `import
# board` and can't be collected off-device).
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
