# Copyright 2026 Curtis Galloway
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ch9329"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI for the WCH CH9329 USB-HID bridge (Openterface Mini-KVM): keyboard/mouse injection over a control UART, speaking paniolo's HID serial protocol"

[[bin]]
name = "ch9329"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serialport = "4"
libc = "0.2"

# --- serve (daemon) mode: async runtime + HTTP/WebSocket --------------------
# The CH9329 UART is driven by the blocking `serialport` path on a dedicated
# thread (see uart.rs) — tokio-serial's async reads are unreliable on a macOS
# tty — bridged to the async server via tokio channels.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net", "io-util"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"

# --- daemon plumbing + client ----------------------------------------------
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[profile.release]
opt-level = 3
lto = "thin"
