# Copyright 2026 Curtis Galloway
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "paniolo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Agent-controlled target machine wrangler — distributed bring-up control over SSH"

[[bin]]
name = "paniolo"
path = "src/main.rs"

[dependencies]
# --- CLI -----------------------------------------------------------------
clap = { version = "4", features = ["derive"] }

# --- Config: typed read model (serde/toml) + comment-preserving edits ----
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

# --- Errors --------------------------------------------------------------
anyhow = "1"
thiserror = "2"

# --- Paths ---------------------------------------------------------------
dirs = "5"

# --- uid for the per-user ControlMaster socket dir; daemon pid checks ----
libc = "0.2"

# --- talking to the serialcap/hdmicap daemons (localhost HTTP) -----------
ureq = { version = "2", features = ["json"] }
serde_json = "1"

# --- direct DTR control fallback when serialcap isn't running ------------
serialport = "4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
