[package]
name = "hdmicap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Warm-stream HDMI capture daemon optimized for agent screenshotting + human preview"

[[bin]]
name = "hdmicap"
path = "src/main.rs"

[dependencies]
# --- Capture -------------------------------------------------------------
# nokhwa unifies V4L2 (Linux) and AVFoundation (macOS) behind one API.
# `input-native` pulls the right per-OS backend in recent 0.10.x.
nokhwa = { version = "0.10", features = ["input-native"] }
# On Linux we bypass nokhwa for the actual frame loop and use v4l directly
# so we can call stream.set_timeout() and avoid an indefinite VIDIOC_DQBUF block.
[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"
turbojpeg = { version = "1.4", features = ["image"] }

# --- Async runtime + HTTP ------------------------------------------------
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net", "process", "io-util"] }
axum = "0.7"

# --- Imaging -------------------------------------------------------------
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# --- CLI -----------------------------------------------------------------
clap = { version = "4", features = ["derive"] }

# --- Daemon plumbing -----------------------------------------------------
fs2 = "0.4"
directories = "5"

# --- Errors / logging / serde -------------------------------------------
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Client subcommands --------------------------------------------------
ureq = "2"
nix = { version = "0.29", features = ["signal", "process"] }

# --- Preview stream ------------------------------------------------------
async-stream = "0.3"
bytes = "1"

[patch.crates-io]
# Local patch: skip activeVideoMin/MaxFrameDuration KVC calls that throw NSException
# on HDMI capture cards (MS2109) under AVFoundation. See vendor/nokhwa-bindings-macos.
nokhwa-bindings-macos = { path = "vendor/nokhwa-bindings-macos" }

[profile.release]
opt-level = 3
lto = "thin"
