[package]
name = "hdmicap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Warm-stream HDMI capture daemon optimized for agent screenshotting + human preview"

[[bin]]
name = "hdmicap"
path = "src/main.rs"

[dependencies]
# --- Async runtime + HTTP ------------------------------------------------
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net", "process", "io-util"] }
axum = "0.7"

# --- Imaging -------------------------------------------------------------
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Fast pure-Rust JPEG encoder for the preview path (no system deps; the
# image crate's encoder is several times slower at preview resolutions).
jpeg-encoder = "0.6"

# --- CLI -----------------------------------------------------------------
clap = { version = "4", features = ["derive"] }

# --- Daemon plumbing -----------------------------------------------------
fs2 = "0.4"
libc = "0.2"

# --- Errors / logging / serde -------------------------------------------
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Client subcommands --------------------------------------------------
ureq = "2"
nix = { version = "0.29", features = ["signal", "process"] }

# --- Preview stream ------------------------------------------------------
async-stream = "0.3"
bytes = "1"

# Linux capture: the v4l crate directly, so we can call stream.set_timeout()
# and avoid an indefinite VIDIOC_DQBUF block, plus keep the raw MJPEG tee.
# nokhwa is used for device enumeration only. turbojpeg provides fast MJPEG
# decode (~5ms vs ~50ms pure-Rust) for signal detection.
# macOS capture: our own ObjC AVFoundation layer (src/capture_avf.m,
# compiled by build.rs) — no nokhwa, no vendored bindings fork.
[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10", features = ["input-native"] }
v4l = "0.14"
turbojpeg = { version = "1.4", features = ["image"] }

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
