# Copyright 2026 Curtis Galloway
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "netbootd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Single-client netboot daemon — DHCP + read-only TFTP in one process, with a privilege-separated /dev/bpf send path on macOS"

[[bin]]
name = "netbootd"
path = "src/main.rs"

# The privileged BPF-fd helper: opens /dev/bpf as root (installed setuid by
# `paniolo setup`) and hands the descriptor to the unprivileged netbootd.
[[bin]]
name = "netbootd-bpf-helper"
path = "src/bin/netbootd-bpf-helper.rs"

[dependencies]
# --- Async runtime -------------------------------------------------------
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-util", "fs"] }

# --- Socket options (SO_REUSEADDR, interface-pinned reply sockets) -------
socket2 = "0.5"

# --- Low-level socket / BPF FFI ------------------------------------------
# libc drives the /dev/bpf ioctls (in the helper), the SCM_RIGHTS fd handoff,
# and the raw write(2) on the BPF descriptor (the macOS send path).
libc = "0.2"
# pnet_datalink is used only to read an interface's MAC address (unprivileged);
# the BPF descriptor itself now comes from the setuid helper, not pnet's
# channel(). Candidate for removal in favor of getifaddrs(3).
pnet_datalink = "0.35"

# --- CLI -----------------------------------------------------------------
clap = { version = "4", features = ["derive"] }

# --- Errors / logging ----------------------------------------------------
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
