[package]
name = "serialcap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Serial console daemon — owns a serial port and fans it out over a localhost WebSocket"

[[bin]]
name = "serialcap"
path = "src/main.rs"

[dependencies]
# --- Async runtime + HTTP ------------------------------------------------
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net", "io-util"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"

# --- Serial --------------------------------------------------------------
# tokio-serial wraps the cross-platform serialport crate with async I/O.
tokio-serial = "5"
# Direct dep so we can name the SerialPort trait for DTR control.
serialport = "4"

# --- CLI -----------------------------------------------------------------
clap = { version = "4", features = ["derive"] }

# --- Daemon plumbing -----------------------------------------------------
fs2 = "0.4"
directories = "5"
nix = { version = "0.29", features = ["signal", "process"] }

# --- Errors / logging / serde -------------------------------------------
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# --- Client subcommands --------------------------------------------------
ureq = "2"

[profile.release]
opt-level = 3
lto = "thin"
