# Copyright 2026 Curtis Galloway
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "usbhub"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Per-port USB hub power control via hub-class requests (pure Rust, nusb)"
repository = "https://github.com/curtisgalloway/paniolo"
readme = "README.md"
keywords = ["usb", "hub", "power", "uhubctl", "vbus"]
categories = ["command-line-utilities", "hardware-support"]

[[bin]]
name = "usbhub"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nusb = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rustyline = "18"

[profile.release]
opt-level = 3
lto = "thin"
